--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -164,3 +164,8 @@
     owner={{consul_user}}
     group={{consul_group}}
     mode=0755
+
+- name: restart consul
+  service: consul
+    state: restarted
+    enabled: yes
