--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -166,6 +166,7 @@
     mode=0755
 
 - name: restart consul
-  service: consul
+  service:
+    name: consul
     state: restarted
     enabled: yes
