--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,5 +14,5 @@ galaxy_info:
   categories:
     - system
 dependencies:
-  - { role: franklinkim.nginx, when: consul_is_ui == true and ansible_os_family == "Debian"}
-  - { role: geerlingguy.nginx, when: consul_is_ui == true and ansible_os_family == "RedHat"}
+#  - { role: franklinkim.nginx, when: consul_is_ui == true and ansible_os_family == "Debian"}
+#  - { role: geerlingguy.nginx, when: consul_is_ui == true and ansible_os_family == "RedHat"}
